# rabbitmq-c

./: .pkg  CMakeLists.txt
cmake/: config.h.in  pkg.cmake
cpp/rabbitmq/: amqp.hpp  login.hpp  stream.hpp
